# rusteze

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  Makefile
backend/src/: config.rs
backend/src/controllers/: example_controller.rs  mod.rs
backend/src/views/: example_view.rs  mod.rs
backend/src/views/templates/pages/: example.html
frontend/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
src/: config.rs  error.rs  main.rs  router.rs
src/controllers/: example_controller.rs  mod.rs
src/views/templates/: example.html
src/views/templates/components/: feature_card.html
src/views/templates/layout/: header.html
